--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #1757ab;
-    /*background-image: url('https://codegena.com/wp-content/uploads/2015/10/Background-Pattern.png');
+    background-image: url('https://i.gifer.com/33HI.gif');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
