--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-image: url('https://i.gifer.com/33HI.gif');
+    background-image: url('https://i.gifer.com/D00b.gif');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
